cmake_minimum_required(VERSION 3.19)
project(Array)

set(CMAKE_CXX_STANDARD 14)

add_executable(Array main.cpp leetcode875.h leetcode1011.h leetcode410.h leetcode167.h leetcode344.h leetcode380.h leetcode710.h leetcode496.h leetcode503.h leetcode26.h header.h leetcode83.h ListNode.h leetcode27.h leetcode283.h leetcode316.h)