cmake_minimum_required(VERSION 3.19)
project(Data_Structure)

set(CMAKE_CXX_STANDARD 14)

add_executable(Data_Structure main.cpp UnionFind.h leetcode130.h leetcode990.h leetcode146.h LRU.h leetcode460.h LFU.h leetcode895.h leetcode295.h leetcode355.h leetcode496.h header.h leetcode503.h leetcode739.h)