cmake_minimum_required(VERSION 3.19)
project(Dynamic_Programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(Dynamic_Programming main.cpp leetcode509.h header.h leetcode322.h leetcode931.h leetcode516.h leetcode494.h leetcode72.h leetcode300.h leetcode354.h leetcode53.h leetcode1143.h leetcode586.h leetcode712.h leetcode518.h leetcode435.h leetcode452.h leetcode55.h leetcode45.h leetcode64.h leetcode174.h leetcode514.h leetcode10.h)