cmake_minimum_required(VERSION 3.19)
project(Math)

set(CMAKE_CXX_STANDARD 14)

add_executable(Math main.cpp leetcode191.h headers.h leetcode231.h leetcode136.h leetcode137.h leetcode260.h leetcode172.h leetcode793.h leetcode204.h leetcode372.h leetcode448.h leetcode645.h ListNode.h leetcode382.h leetcode398.h leetcode26.h leetcode83.h leetcode27.h leetcode283.h leetcode292.h leetcode877.h leetcode319.h)