cmake_minimum_required(VERSION 3.19)
project(Sliding_Window)

set(CMAKE_CXX_STANDARD 14)

include_directories("Sliding Window")

add_executable(Sliding_Window
        "Sliding Window/leetcode3.h"
        "Sliding Window/leetcode438.h"
        "Sliding Window/leetcode567.h"
        "Sliding Window/leetcode76.h"
        "Sliding Window/main.cpp")
