cmake_minimum_required(VERSION 3.19)
project(Tree)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tree main.cpp leetcode226.h TreeNode.h leetcode114.h leetcode116.h leetcode654.h leetcode105.h leetcode106.h leetcode652.h leetcode230.h leetcode450.h leetcode701.h leetcode700.h leetcode98.h leetcode96.h leetcode95.h leetcode1373.h)